order filter & authen

--- a/NetCafeWeb/Views/Shared/MasterPage.cshtml
+++ b/NetCafeWeb/Views/Shared/MasterPage.cshtml
@@ -86,7 +86,7 @@
                         </a>
                     </li>
                     <li class="sub-menu">
-                        <a href="/netcafe;" class="">
+                        <a href="/netcafe" class="">
                             <i class="icon_document_alt"></i>
                             <span>Net Management</span>
 
@@ -130,7 +130,7 @@
                     </li>
                     -->
                     <li class="sub-menu">
-                        <a href="/order;" class="">
+                        <a href="/order" class="">
                             <i class="icon_documents_alt"></i>
                             <span>Order Management</span>
                         </a>
@@ -142,7 +142,7 @@
                         </ul>*@
                     </li>
                     <li class="sub-menu">
-                        <a href="/user;" class="">
+                        <a href="/user" class="">
                             <i class="icon-user"></i>
                             <span>User Management</span>
 
