--- a/NetCafeWeb/Views/Order/Index.cshtml
+++ b/NetCafeWeb/Views/Order/Index.cshtml
@@ -1,12 +1,16 @@
-﻿@{
+﻿
+
+@{
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/MasterPage.cshtml";
     List<Order> orders = ViewBag.orders;
+
+
 }
 
 <p></p>
-
-
+<h1>@ViewBag.isMember</h1>
 <div class="container">
     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add New Order</button>
     <h2>Order Manager - for admin only</h2>
