--- a/NetCafeWeb/Views/PC/Index.cshtml
+++ b/NetCafeWeb/Views/PC/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewBag.Title = "Index";
-    List<NetCafe> netcafes = ViewBag.netcafes;
-    List<PC> pcs = ViewBag.pcs;
-    String isAdmin = ViewBag.isAdmin;
+    List<NetCafe> netList = ViewBag.NetList;
+    List<PC> pcList = ViewBag.PCList;
     Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
@@ -16,56 +15,63 @@
         });
     });
 </script>
-<h2>PC Managerment</h2>
 
 <div class="container">
     <div class="row">
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">+ Add New PC</button>
+        <h3><strong>PC Management</strong></h3>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">+ Add New PC</button><br/>
         <div class="table-responsive">
             @{
                 int i = 1;
-                foreach (PC pc in pcs)
+                foreach (PC pc in pcList)
                 {
-                    <div class="col-xs-10" style="border: ridge; height:250px; width:300px; padding-left:0px" >
-                        <ul>
-                            <li>
-                                <a href="#@i">PC: @i - @pc.PCName<br></a>
-                                <div id="@i" class="collapse">
-                                    <p>Price: @pc.Price</p>
-                                    <p>Description: @pc.PCDescriptions</p>
-                                    @{  foreach (NetCafe netcafe in netcafes)
-                                        {
-                                            if (pc.NetCafeID == netcafe.NetCafeID)
-                                            {
-                                                <p>Address: @netcafe.NetCafeName - @netcafe.NetCafeAddress</p>
-                                            }
-                                        }
-                                        
-                                    }
-                                    @if (@pc.PCStatus == 1) {
-                                        <p>Status: Available</p>
-                                    }
-                                    else {
-                                        <p>Status: N/A</p>
-                                    }
-                                </div>
-                                <button class="btn btn-info" onclick="location.href='/PC/edit/@pc.PCID'">Edit</button>
-                                <button class="btn btn-success" onclick="deletePC(@pc.PCID)">Delete</button>
-                                <script>
-                                    $(document).ready(function collapse() {
-                                        $('#@i').mouseover(function () {
-                                            $('.collapse').collapse('show');
-                                        });
-                                        $('#@i').mouseout(function () {
-                                            $('.collapse').collapse('hide');
-                                        });
-                                    })
-                                </script>
-                            </li>
-                        </ul>
-                     </div>
+                    <div class="floating-box" style="float: left; margin: 10px 10px 0px 0px; border: 1px solid; height:250px; width:200px; text-align:center ">
+                        @{
+                            if (pc.PCStatus == 1)
+                            {
+                                <object class="circle" style="color:#33ff4e"></object>
+                            }
+                            else
+                            {
+                                <object class="circle" style="color:#db3700"></object>
+                            }
 
-                    
+                        }
+                        <label><strong>@pc.PCName</strong></label><br/>
+                        <div class="pcBasic">
+                            <img style="margin-left: 25px" width="150" height="150" src=" ~/Content/image/my-computer-vista.png" />
+                            <p>Price: @pc.Price đ/h</p>
+                        </div>
+                        <div class="pcDetail" style="height: 170px">
+                            <p>Price: @pc.Price đ/h</p>
+                            <p>Description: @pc.PCDescriptions</p>
+                                @{foreach (NetCafe netcafe in netList)
+                                    {
+                                        if (pc.NetCafeID == netcafe.NetCafeID)
+                                        {
+                                            <p>Address: @netcafe.NetCafeName - @netcafe.NetCafeAddress</p>
+                                        }
+                                    }
+                                        
+                                }
+                                @if (@pc.PCStatus == 1) {
+                                    <p>Status: Available</p>
+                                }
+                                else {
+                                    <p>Status: N/A</p>
+                                }
+                        </div>
+                            <button class="btn btn-info" onclick="location.href='/PC/edit/@pc.PCID'">Edit</button>
+                            <button class="btn btn-success" onclick="deletePC(@pc.PCID)">Delete</button>
+                        <style>
+                            .circle:before {content: '\25CF'; font-size: 20px;}
+                            .pcBasic {position:absolute; overflow:visible;opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";filter:alpha(opacity=1);pointer-events:none}
+                            .pcDetail {display:inline-block; overflow:hidden;opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0);pointer-events:none}
+                            .floating-box:hover .pcDetail {opacity:1;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";filter:alpha(opacity=100);-webkit-transition-duration:.5s;-moz-transition-duration:.5s;-o-transition-duration:.5s;transition-duration:.5s }
+                            .floating-box:hover .pcBasic {opacity:0;-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";filter:alpha(opacity=0);-webkit-transition-duration:.5s;-moz-transition-duration:.5s;-o-transition-duration:.5s;transition-duration:.5s }
+                        </style>
+                     </div>
+                     
                     i++;
                 }
             }
@@ -98,7 +104,7 @@
                             <option value="-1">Select</option>
                             @{
 
-                                foreach (NetCafe netcafe in netcafes)
+                                foreach (NetCafe netcafe in netList)
                                 {
                                     <option value="@netcafe.NetCafeID">@netcafe.NetCafeName - @netcafe.NetCafeAddress</option>
                                 }
@@ -113,7 +119,7 @@
                         </select>
                     </div>
                 </div>
-                <p id="error" style="color='red'"></p>
+                <p id="error" style="color: red"></p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -125,7 +131,7 @@
 </div>
 
 
-<script>    
+<script>
     function addPC() {
         $("#error").html("");
         var name = $('#pcName').val();
