--- a/NetCafeWeb/Views/Order/Edit.cshtml
+++ b/NetCafeWeb/Views/Order/Edit.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewBag.Title = "Edit";
+    
     Order order = ViewBag.orders;
+    
 }
 
-<h2>Edit Order @order.OrderID</h2>
+<h2>Edit + @order</h2>
 @{ if (order == null)
  {
     <h2>This order is not longer available. Please try again.</h2>
@@ -12,19 +14,19 @@
  {
     <div class="form-group" style="width: 100%">
         <label for="usr">PC</label>
-        <input type="text" class="form-control" id="pcid">
+        <input type="text" class="form-control" id="PC">
         <label for="usr">User</label>
-        <input type="text" class="form-control" id="userid">
+        <input type="text" class="form-control" id="user">
         <label for="usr">Start Time</label>
         <input type="text" class="form-control" id="startTime">
         <div class="form-group">
             <label for="sel1">Duration</label>
             <select class="form-control" id="duration">
                 <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
+                <option value="1">2</option>
+                <option value="1">3</option>
+                <option value="1">4</option>
+                <option value="1">5</option>
             </select>
         </div>
         <div class="form-group">
@@ -32,7 +34,7 @@
             <select class="form-control" id="orderStatus">
                 <option value="1">Holding</option>
                 <option value="2">Using</option>
-                <option value="3">Free</option>
+                <option value="2">Free</option>
             </select>
         </div>
 
@@ -47,18 +49,17 @@
 <script>
     function editOrder() {
         $("#error").html("");
-        var id = @order.OrderID;
-        var pcid = $('#pcid').val();
-        var userid = $('#userid').val();
+        var PC = $('#PC').val();
+        var user = $('#user').val();
         var startTime = $('#startTime').val();
-        var duration = $('#duration option:selected').val();
-        var orderStatus = $('#orderStatus option:selected').val();
+        var duration = $('#orderStatus option:selected').val();
+        var status = $('#netCafeStatus option:selected').val();
 
-        if (pcid == "") {
+        if (PC == "") {
             $("#error").html("PC name must not be blank");
             return;
         }
-        if (userid == "") {
+        if (user == "") {
             $("#error").html("Username must not be blank");
             return;
         }
@@ -70,7 +71,7 @@
             $("#error").html("You must select duration");
             return;
         }
-        if (orderStatus == "-1" || orderStatus == "") {
+        if (status == "-1" || status == "") {
             $("#error").html("You must select status for this order");
             return;
         }
@@ -79,12 +80,11 @@
         $.ajax({
             url: '/order/editOrder',
             data: {
-                id: id,
-                pcid: pcid,
-                userid: userid,
-                startTime: startTime,
-                duration: duration,
-                orderStatus: orderStatus,
+                pcid: PC,
+                userid: UserID,
+                startTime: StartTime,
+                duration: Duration,
+                status: Status,
             },
             error: function () {
                 alert("Problem")
