--- a/NetCafeWeb/Views/Order/Index.cshtml
+++ b/NetCafeWeb/Views/Order/Index.cshtml
@@ -1,19 +1,16 @@
-﻿@{
+﻿
+
+@{
 
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/MasterPage.cshtml";
     List<Order> orders = ViewBag.orders;
 
-    List<User> users = ViewBag.users;
-    List<PC> pcs = ViewBag.pcs;
-}
 
-<p></p>
 }
 
 <p></p>
 <h1>@ViewBag.isMember</h1>
-
 <div class="container">
     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add New Order</button>
     <h2>Order Manager - for admin only</h2>
@@ -39,39 +36,11 @@
                         <td><button class="btn-warning" onclick="location.href='/Order/edit/@order.OrderID'">Edit</button></td>
                         <td><button class="btn-danger" onclick="deleteOrder(@order.OrderID)">Delete</button></td>
                         <td>@order.OrderID</td>
-                        @{  foreach (PC pc in pcs)
-                            {
-                                        if (pc.PCID == order.PCID)
-                                        {
-                                            <td>@pc.PCName</td>
-                                        }
-                            }
-                        }
-                        
-                        @{  foreach (User user in users)
-                                    {
-                                        if (user.UserID == order.UserID)
-                                        {
-                                            <td>@user.Fullname</td>
-                                        }
-                                    }
-                        }
+                        <td>@order.PCID</td>
+                        <td>@order.UserID</td>
                         <td>@order.StartTime</td>
-                        <td>@order.Duration Hours</td>
-                        @{
-                            if (@order.OrderStatus == 1)
-                            {                        
-                                <td>Holding</td>
-                            }
-                            if (@order.OrderStatus == 2)
-                            {                        
-                                <td>Using</td>
-                            }
-                            if (@order.OrderStatus == 3)
-                            {                        
-                                <td>Free</td>
-                            }
-                        }
+                        <td>@order.Duration</td>
+                        <td>@order.OrderStatus</td>
                     </tr>
                 }
             }
@@ -101,10 +70,10 @@
                         <label for="sel1">Duration</label>
                         <select class="form-control" id="duration">
                             <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
+                            <option value="1">2</option>
+                            <option value="1">3</option>
+                            <option value="1">4</option>
+                            <option value="1">5</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -112,7 +81,7 @@
                         <select class="form-control" id="orderStatus">
                             <option value="1">Holding</option>
                             <option value="2">Using</option>
-                            <option value="3">Free</option>
+                            <option value="2">Free</option>
                         </select>
                     </div>
 
@@ -135,11 +104,11 @@
 
     function addOrder() {
         $("#error").html("");
-        var pcid = $('#PC').val();
+        var PC = $('#PC').val();
         var user = $('#user').val();
         var startTime = $('#startTime').val();
-        var duration = $('#duration option:selected').val();
-        var status = $('#orderStatus option:selected').val();
+        var duration = $('#orderStatus option:selected').val();
+        var status = $('#netCafeStatus option:selected').val();
 
         if (PC == "") {
             $("#error").html("PC name must not be blank");
@@ -165,11 +134,12 @@
         $.ajax({
             url: '/Order/add',
             data: {
-                pcid: pcid,
-                user: user,
-                startTime: startTime,
-                duration: duration,
+                name: name,
+                address: address,
+                supervisor: supervisor,
                 status: status,
+                phoneNumber: phoneNumber,
+                description: description
             },
             error: function () {
                 alert("Problem")
@@ -183,7 +153,7 @@
         });
         $('#myModal').modal('hide');
     }
-    function deleteOrder(id) {
+    function deletenetcafe(id) {
         $.ajax({
             url: '/order/delete',
             data: {
